--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,11 +25,11 @@ services:
   db:
     image: postgres:15-alpine
     volumes:
-      - dev-db-data:/var/lib/postgresql/data
+      - dev-resistor-db-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=devdb
       - POSTGRES_USER=devuser
       - POSTGRES_PASSWORD=changeme
 
 volumes:
-  dev-db-data:
+  dev-resistor-db-data:
