--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ Django>=4.1.4,<4.2
 djangorestframework>=3.14,<3.15
 psycopg2>=2.9.5,<2.10
 drf-spectacular>=0.25.1,<0.26
+
+# For Authentication
+djangorestframework-simplejwt>=4.8.0,<4.9
+cryptography>=3.4.8,<3.5
