--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ drf-spectacular>=0.25.1,<0.26
 djangorestframework-simplejwt>=5.2.2,<5.3
 cryptography>=38.0.4,<38.1
 django-cors-headers >= 3.10.0,<3.11
+
+# For .env
+python-dotenv>=0.19.0,<0.20
